--- a/OchoPad/OchoPad/Base.lproj/Main.storyboard
+++ b/OchoPad/OchoPad/Base.lproj/Main.storyboard
@@ -562,7 +562,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Add Assignment" id="8AY-yP-cd4">
-                        <barButtonItem key="rightBarButtonItem" title="Done" id="Fz1-R5-bNE">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="add" id="Fz1-R5-bNE">
                             <connections>
                                 <action selector="done:" destination="QfN-mY-YpG" id="TPD-0h-7JV"/>
                             </connections>
